# routes/api.php
@@ -15,10 +15,11 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-// Маршрут для регистрации пользователя
-Route::post('/register', [AuthController::class, 'register']);
-// Маршрут для аутентификации пользователя
-Route::post('/login', [AuthController::class, 'login']);
+Route::prefix('auth')->group(function () {
+    Route::post('/register', [AuthController::class, 'register']);
+    Route::post('/login', [AuthController::class, 'login']);
+    Route::post('/logout', [AuthController::class, 'logout']);
+});
 
 Route::get('hello', function () {
     return response()->json(['message' => 'Hello!']);
